Bug: Found bug, dark mode, square grid on selection bg color changes

--- a/style.css
+++ b/style.css
@@ -88,6 +88,18 @@ button {
   text-shadow: 0.2rem 0.1rem 0.3rem #2eb62c;
 }
 
+button:hover {
+  background-color: green;
+  transform: scale(1.3);
+  transition: background-color 0.2s ease-in-out;
+}
+
+button:active {
+  background-color: #2eb62c;
+  box-shadow: 0px 0px 10px #2eb62c;
+  transform: scale(1);
+}
+
 /* Dark Mode */
 .dark-mode {
   background: #111;
@@ -139,15 +151,3 @@ button {
 }
 
 /* Responsive add Media Queries need Testing */
-/* @media (min-width: 768px) {
-    .square {
-      width: 6.6%;
-      height: 6.6%;
-    }
-  }
-  @media (min-width: 1024px) {
-    .square {
-      width: 4%;
-      height: 4%;
-    }
-  } */
